force-app/main/default/objects/Call_Detail__c/fields/Allocated_Project_Text__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Project_Text__c</fullName>
    <formula>TEXT( Allocated_Project__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Project Text</label>
    <type>Text</type>
</CustomField>