force-app/main/default/objects/Call_Detail__c/fields/Call_Type_ENUM__c.field-meta.xml
<CustomField>
    <fullName>Call_Type_ENUM__c</fullName>
    <label>Call Type(ENUM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>