force-app/main/default/objects/Call_Detail__c/fields/Calls_Done_Today__c.field-meta.xml
<CustomField>
    <fullName>Calls_Done_Today__c</fullName>
    <formula>DATEVALUE(CreatedDate) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calls Done Today</label>
    <type>Checkbox</type>
</CustomField>