force-app/main/default/objects/Call_Detail__c/fields/Created_By_CP_Mobile_APP__c.field-meta.xml
<CustomField>
    <fullName>Created_By_CP_Mobile_APP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By CP Mobile APP</label>
    <type>Checkbox</type>
</CustomField>