force-app/main/default/objects/Call_Detail__c/fields/Project_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Formula__c</fullName>
    <formula>TEXT( Related_Source__r.Allocated_Project__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name Formula</label>
    <type>Text</type>
</CustomField>