force-app/main/default/objects/Call_Detail__c/fields/Project_Text__c.field-meta.xml
<CustomField>
    <fullName>Project_Text__c</fullName>
    <label>Project Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>