force-app/main/default/objects/Call_Detail__c/listViews/Zuari_Gangothri_Tribhuja_Todays.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangothri_Tribhuja_Todays</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Related_Source__c</columns>
    <columns>Call_From__c</columns>
    <columns>Call_To__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Recording_File__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Project_Name_Formula__c</field>
        <operation>equals</operation>
        <value>Zuari Gangothri Tribhuja</value>
    </filters>
    <label>Zuari Gangothri Tribhuja Todays</label>
</ListView>